fixed clipping issue with modal images

--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -11,7 +11,7 @@
 
 .modal-body {
 	padding: 1rem;
-	width: 95%;
+	width: 90%;
 
 	position: absolute;
 	top: 50%;
@@ -53,6 +53,9 @@
 }
 
 @media screen and (max-width: 768px) {
+	.modal-body {
+		width: 95%;
+	}
 	.title {
 		font-size: 1.25rem;
 	}
